# crate

./: .env.example  Makefile  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/: main.py  settings.py
src/api/: health.py
src/utils/: logger.py
tests/: conftest.py  test_health.py
