[project]
name = "crate"
version = "0.1.0"
description = "Webhook-based FastAPI service for file classification in data workflows."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]
